// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableAttributes /> if superclass is empty renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="flex items-center space-x-2 py-1 mx-2 my-1"
        >
          MockRemoveAttributeButton tableId: 
          1
          attributeId: 
          13
          <div
            class="flex w-full"
          >
            <input
              class="p-2 w-2/3 rounded-l-md h-full z-10"
              placeholder="Attribute"
              tabindex="4"
              title="Name of attribute"
              type="text"
              value="mockFirstAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
        </div>
        <div
          class="flex items-center space-x-2 py-1 mx-2 my-1"
        >
          MockRemoveAttributeButton tableId: 
          1
          attributeId: 
          14
          <div
            class="flex w-full"
          >
            <input
              class="p-2 w-2/3 rounded-l-md h-full z-10"
              placeholder="Attribute"
              tabindex="4"
              title="Name of attribute"
              type="text"
              value="mockSecondAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
        </div>
        MockAddAttributeButton tableId: 
        1
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="flex items-center space-x-2 py-1 mx-2 my-1"
      >
        MockRemoveAttributeButton tableId: 
        1
        attributeId: 
        13
        <div
          class="flex w-full"
        >
          <input
            class="p-2 w-2/3 rounded-l-md h-full z-10"
            placeholder="Attribute"
            tabindex="4"
            title="Name of attribute"
            type="text"
            value="mockFirstAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
      </div>
      <div
        class="flex items-center space-x-2 py-1 mx-2 my-1"
      >
        MockRemoveAttributeButton tableId: 
        1
        attributeId: 
        14
        <div
          class="flex w-full"
        >
          <input
            class="p-2 w-2/3 rounded-l-md h-full z-10"
            placeholder="Attribute"
            tabindex="4"
            title="Name of attribute"
            type="text"
            value="mockSecondAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
      </div>
      MockAddAttributeButton tableId: 
      1
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TableAttributes /> if superclass is not empty renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="my-6"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="my-6"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
